<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="slogan">Love texting again.</string>
    <string name="unknown_number">Unknown Number</string>
    <string name="popup_photo_CD">Photo</string>
    <string name="loading">Loading…</string>
    <string name="test">Test string</string>
    <string name="hint_contacts">Enter recipients</string>
    <string name="hint_search">Search something</string>
    <string name="hint_reply">Enter a message</string>
    <string name="hint_redeem">Enter code</string>
    <string name="hint_hex">Hex</string>
    <string name="new_message">New message</string>
    <string name="new_messages">new messages</string>
    <string name="failed_message">Message failed to send</string>
    <string name="failed_messages">messages failed to send</string>
    <string name="failed_messages_summary">Tap to view</string>
    <string name="quickcompose">QK Compose</string>
    <string name="quickcompose_detail">Click to send a message</string>
    <string name="welcome_start">Let\'s get started!</string>
    <string name="welcome_skip">SKIP</string>
    <string name="welcome_finish">FINISH</string>
    <string name="welcome_next">NEXT</string>
    <string name="welcome_theme_title">Pick a color</string>
    <string name="welcome_theme_description">Any color.</string>
    <string name="welcome_night_description">Easy on the eyes.</string>
    <string name="welcome_night_hint">Toggle me</string>
    <string name="welcome_quickreply_title">QK Reply</string>
    <string name="welcome_quickreply_description">Reply to messages faster than ever.</string>
    <string name="welcome_quickreply_hint">Try it!</string>
    <string name="welcome_quickreply_message_1">Wow! Now wasn\'t that awesome? You can view your entire conversation at a glance. Tap outside the popup or press the checkmark to dismiss it.</string>
    <string name="welcome_quickreply_message_2">This is QK Reply. Now you can reply to messages from anywhere. Tap the expand button to see what happens next :)</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_show_all">Show all messages</string>
    <string name="menu_show_unread">Show unread messages</string>
    <string name="menu_open_thread">Open conversation</string>
    <string name="menu_forward">Forward message</string>
    <string name="menu_call">Call</string>
    <string name="menu_read">Mark as read</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_billing">Donate</string>
    <string name="menu_copy">Copy text</string>
    <string name="menu_changelog">"What's new"</string>
    <string name="menu_show_all_prefs">Show all</string>
    <string name="menu_show_fewer_prefs">Show fewer</string>
    <string name="details_title">Details</string>
    <string name="details_to">To</string>
    <string name="details_from">From</string>
    <string name="details_body">Body</string>
    <string name="details_date_sent">Date sent</string>
    <string name="details_date_received">Date received</string>
    <string name="rate_title">Like the App?</string>
    <string name="rate_action">Rate</string>
    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_category_summary_appearance">Themes, fonts, colors, avatars, and more</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_summary_general">Delivery, message sending, formatting</string>
    <string name="pref_category_blocking">Message blocking</string>
    <string name="pref_category_notifications">Notifications</string>
    <string name="pref_category_summary_notifications">Sounds, LED, privacy</string>
    <string name="pref_category_mms">MMS</string>
    <string name="pref_category_summary_mms">Configure MMS (APNs), max size, group messaging</string>
    <string name="pref_category_quickreply">QK Reply</string>
    <string name="pref_category_summary_quickreply">QK Reply, popup options</string>
    <string name="pref_category_quickcompose">QK Compose</string>
    <string name="pref_category_summary_quickcompose">QK Compose</string>
    <string name="pref_category_about">About</string>
    <string name="pref_category_summary_about">Version, changelog, author, thanks</string>
    <string name="pref_icon">Update icon color</string>
    <string name="pref_icon_summary">Tap to change the App-icon color</string>
    <string name="pref_theme">Theme color</string>
    <string name="pref_theme_summary_alt">Tap to change theme</string>
    <string name="pref_icon_dark">Use dark icon</string>
    <string name="pref_icon_dark_summary">Use the dark version of the App icon on your homescreen, to better match your wallpaper</string>
    <string name="pref_status_tint">Tinted status bar</string>
    <string name="pref_navigation_tint">Tinted navigation bar</string>
    <string name="pref_background">Background color</string>
    <string name="pref_background_summary">Tap to change background color</string>
    <string name="pref_bubbles">Message bubbles</string>
    <string name="pref_bubbles_summary">Tap to change message bubble preferences</string>
    <string name="pref_night">Night mode</string>
    <string name="pref_night_summary">Save battery and reduce eye strain</string>
    <string name="pref_night_amoled">Pure black background</string>
    <string name="pref_night_amoled_summary">Save extra battery on devices with AMOLED displays</string>
    <string name="pref_bubble_style_new">Use new bubble style</string>
    <string name="pref_color_sent">Color sent messages</string>
    <string name="pref_color_sent_summary">Color the background bubbles for outgoing messages</string>
    <string name="pref_color_received">Color received messages</string>
    <string name="pref_color_received_summary">Color the background bubbles for incoming messages</string>
    <string name="pref_hide_avatar_conversations">Hide conversation avatars</string>
    <string name="pref_hide_avatar_conversations_summary">Hide avatars for contacts in conversation list</string>
    <string name="pref_hide_avatar_sent">Hide sent message avatars</string>
    <string name="pref_hide_avatar_sent_summary">Hide your avatar for outgoing messages</string>
    <string name="pref_hide_avatar_received">Hide received message avatars</string>
    <string name="pref_hide_avatar_received_summary">Hide contact avatar for incoming messages</string>
    <string name="pref_font_family">Font family</string>
    <string name="pref_font_size">Font size</string>
    <string name="pref_font_weight">Font weight</string>
    <string name="pref_message_count">Message count</string>
    <string name="pref_message_count_summary">Show the number of messages for each conversation</string>
    <string name="pref_sent_timestamps">Sent timestamps</string>
    <string name="pref_sent_timestamps_summary">Show the timestamp for when a message was sent, not received</string>
    <string name="pref_force_timestamps">Force timestamps</string>
    <string name="pref_force_timestamps_summary">Enable timestamps for all messages</string>
    <string name="pref_key_timestamp_delay">New timestamp delay</string>
    <string name="pref_key_timestamp_delay_summary">The number of minutes which must elapse between two messages in order for a new timestamp to be shown.</string>
    <string name="pref_compose_favorites">Starred contacts</string>
    <string name="pref_compose_summary_favorites">Show your starred contacts in the QK Compose window, making them only a tap away</string>
    <string name="pref_prox_sensor_call">Proximity sensor</string>
    <string name="pref_about_version_title">Version</string>
    <string name="pref_about_authors_title">Based on QKSMS Version 2.7.3</string>
    <string name="pref_about_authors_summary">from Moez Bhatti</string>
    <string name="pref_about_thanks_title">Thank you</string>
    <string name="pref_about_thanks_summary">Tap to view open-source contributors</string>
    <string name="pref_donate_title">Donate</string>
    <string name="pref_donate_summary">QKSMS is free. Help support by donating!</string>
    <string name="pref_about_github_title">GitHub</string>
    <string name="pref_about_github_summary">QKSMS is open source. Contribute and report issues on GitHub</string>
    <string name="pref_category_bluetooth">Notification Forwarding</string>
    <string name="pref_category_summary_bluetooth">\'Notifications to Bluetooth\' Settings</string>
    <string name="pref_category_bluetooth_more">More Bluetooth-Settings</string>
    <string name="pref_category_summary_bluetooth_more">Useful Bluetooth-Settings for your in-car-system</string>
    <string name="pref_category_bluetooth_2">Information</string>
    <string name="pref_category_bluetooth_3">System settings</string>
    <string name="pref_bluetooth_enabled_title">Enable</string>
    <string name="pref_bluetooth_enabled_summary">Enable the Notification forwarding</string>
    <string name="pref_bluetooth_connected_title">Only with Bluetooth Connection</string>
    <string name="pref_bluetooth_connected_summary">Messages only get forwarded when connected to Bluetooth</string>
    <string name="pref_bluetooth_markasread_title">Save Messages as read</string>
    <string name="pref_bluetooth_markasread_summary">Deactivate if encounter problems with Samsung-Devices</string>
    <string name="pref_bluetooth_delete_title">Delete Messages</string>
    <string name="pref_bluetooth_delete_summary">Delete the temporary Notification-Messages on a Bluetooth-disconnect</string>
    <string name="pref_bluetooth_enablenotification_title">Notification access</string>
    <string name="pref_bluetooth_enablenotification_summary">Allow this App to listen for Notifications. This is necessary to get the Notifications forwarded</string>
    <string name="pref_bluetooth_setdefault_title">Default SMS-App</string>
    <string name="pref_bluetooth_setdefault_summary">Set this App as the default SMS App. This is necessary to get the Notifications forwarded</string>
    <string name="pref_bluetooth_apps_title">Application White List</string>
    <string name="pref_bluetooth_apps_summary">Select the Apps, from whom Notifications get forwarded</string>
    <string name="pref_bluetooth_showname_title">Show App-Name as sender</string>
    <string name="pref_bluetooth_showname_summary">Not supported for most of the devices</string>
    <string name="pref_bluetooth_maxvol_title">Increase Bluetooth-Volume</string>
    <string name="pref_bluetooth_maxvol_summary">Set the Bluetooth-Volume on connect to 100%</string>
    <string name="pref_bluetooth_markasread_delayed_title">Delayed Mark-as-Read</string>
    <string name="pref_bluetooth_markasread_delayed_summary">Enable if you don\'t get messages (mostly on Samsung-Devices)</string>
    <string name="pref_bluetooth_whatsapp_magic_title">Assign WhatsApp-Messages</string>
    <string name="pref_bluetooth_whatsapp_magic_summary">Show the name and number from the sender of the WhatsApp-Message</string>
    <string name="pref_bluetooth_devices_summary">Choose the devices, where the above mentioned actions should happen (e.g. the Car-Bluetooth)</string>
    <string name="pref_bluetooth_devices_title">Select Bluetooth-Device</string>
    <string name="pref_bluetooth_support_summary">For further questions or improvements just drop me a mail!</string>
    <string name="pref_bluetooth_support_title">Support</string>
    <string name="pref_bluetooth_donate_summary">Help the developer of the Bluetooth-Addon and donate for some coffee!</string>
    <string name="pref_bluetooth_donate_title">☕ Donate ☕</string>
    <string name="pref_bluetooth_emoji_title">Replace Emojis</string>
    <string name="pref_bluetooth_emoji_summary">Replace the □ Emojis with their description-text</string>
</resources>