<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <Preference
            android:icon="@drawable/ic_palette"
            android:key="pref_key_category_appearance"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_appearance"
            android:title="@string/pref_category_appearance" />
        <Preference
            android:icon="@drawable/ic_settings"
            android:key="pref_key_category_general"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_general"
            android:title="@string/pref_category_general" />
        <Preference
            android:icon="@drawable/ic_launcher_bluetooth"
            android:key="pref_key_category_bluetooth"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_bluetooth"
            android:title="@string/pref_category_bluetooth" />
        <Preference
            android:icon="@drawable/ic_launcher_bluetooth"
            android:key="pref_key_category_bluetooth_more"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_bluetooth_more"
            android:title="@string/pref_category_bluetooth_more" />
        <Preference
            android:icon="@drawable/ic_notifications"
            android:key="pref_key_category_notifications"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_notifications"
            android:title="@string/pref_category_notifications" />
        <Preference
            android:icon="@drawable/ic_photo"
            android:key="pref_key_category_mms"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_mms"
            android:title="@string/pref_category_mms" />
        <Preference
            android:icon="@drawable/ic_reply"
            android:key="pref_key_category_quickreply"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_quickreply"
            android:title="@string/pref_category_quickreply" />
        <Preference
            android:icon="@drawable/ic_compose"
            android:key="pref_key_category_quickcompose"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_quickcompose"
            android:title="@string/pref_category_quickcompose" />
        <Preference
            android:icon="@drawable/ic_info_fill"
            android:key="pref_key_category_about"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_about"
            android:title="@string/pref_category_about" />
</PreferenceScreen>