<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/list_item_preference_category"
        android:title="@string/pref_category_bluetooth">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_bluetooth_enabled"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_bluetooth_enabled_summary"
            android:title="@string/pref_bluetooth_enabled_title"
            android:widgetLayout="@layout/view_switch" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_bluetooth_connected"
            android:dependency="pref_key_bluetooth_enabled"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_bluetooth_connected_summary"
            android:title="@string/pref_bluetooth_connected_title"
            android:widgetLayout="@layout/view_switch" />

        <CheckBoxPreference
            android:dependency="pref_key_bluetooth_enabled"
            android:defaultValue="true"
            android:key="pref_key_bluetooth_delete"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_bluetooth_delete_summary"
            android:title="@string/pref_bluetooth_delete_title"
            android:widgetLayout="@layout/view_switch" />

        <Preference
            android:key="pref_key_bluetooth_devices"
            android:dependency="pref_key_bluetooth_enabled"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_bluetooth_devices_summary"
            android:title="@string/pref_bluetooth_devices_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="pref_key_bluetooth_enabled"
            android:key="pref_key_bluetooth_markasread"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_bluetooth_markasread_summary"
            android:title="@string/pref_bluetooth_markasread_title"
            android:widgetLayout="@layout/view_switch" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="pref_key_bluetooth_markasread"
            android:key="pref_key_bluetooth_markasread_delayed"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_bluetooth_markasread_delayed_summary"
            android:title="@string/pref_bluetooth_markasread_delayed_title"
            android:widgetLayout="@layout/view_switch" />

        <CheckBoxPreference
            android:dependency="pref_key_bluetooth_enabled"
            android:defaultValue="true"
            android:key="pref_key_bluetooth_whatsapp_magic"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_bluetooth_whatsapp_magic_summary"
            android:title="@string/pref_bluetooth_whatsapp_magic_title"
            android:widgetLayout="@layout/view_switch" />

        <CheckBoxPreference
            android:dependency="pref_key_bluetooth_enabled"
            android:defaultValue="@bool/preL"
            android:key="pref_key_bluetooth_whatsapp_alternative"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_bluetooth_whatsapp_alternative_summary"
            android:title="@string/pref_bluetooth_whatsapp_alternative_title"
            android:widgetLayout="@layout/view_switch" />


        <CheckBoxPreference
            android:dependency="pref_key_bluetooth_enabled"
            android:defaultValue="true"
            android:key="pref_key_bluetooth_emoji"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_bluetooth_emoji_summary"
            android:title="@string/pref_bluetooth_emoji_title"
            android:widgetLayout="@layout/view_switch" />

        <CheckBoxPreference
            android:dependency="pref_key_bluetooth_enabled"
            android:defaultValue="false"
            android:key="pref_key_bluetooth_showname"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_bluetooth_showname_summary"
            android:title="@string/pref_bluetooth_showname_title"
            android:widgetLayout="@layout/view_switch" />

        <Preference
            android:key="pref_key_bluetooth_apps"
            android:dependency="pref_key_bluetooth_enabled"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_bluetooth_apps_summary"
            android:title="@string/pref_bluetooth_apps_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/list_item_preference_category"
        android:title="@string/pref_category_bluetooth_3">
        <Preference
            android:key="pref_key_bluetooth_enablenotification"
            android:dependency="pref_key_bluetooth_enabled"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_bluetooth_enablenotification_summary"
            android:title="@string/pref_bluetooth_enablenotification_title" />

        <Preference
            android:key="pref_key_bluetooth_setdefault"
            android:dependency="pref_key_bluetooth_enabled"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_bluetooth_setdefault_summary"
            android:title="@string/pref_bluetooth_setdefault_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/list_item_preference_category"
        android:title="@string/pref_category_bluetooth_2">
        <Preference
            android:key="pref_key_bluetooth_support"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_bluetooth_support_summary"
            android:title="@string/pref_bluetooth_support_title" />
        <Preference
            android:key="pref_key_bluetooth_donate"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_bluetooth_donate_summary"
            android:title="@string/pref_bluetooth_donate_title" />
    </PreferenceCategory>
</PreferenceScreen>
